examples/test/testpolicy10458.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10458
  namespace: namespace48
spec:
  podSelector:
    matchLabels:
      key40: value22
      key42: value0
      key38: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value36
      podSelector:
        matchLabels:
          key17: value19
          key27: value46
